--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "accessibility-checker": "^3.1.78",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "puppeteer": "^23.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
